=replaced to typescript and changed it to be compatible with whatsapp business

--- a/.env.example
+++ b/.env.example
@@ -6,21 +6,19 @@ NODE_ENV=development
 APP_NAME=Event RSVP WhatsApp
 API_PREFIX=/api/v1
 
-# WhatsApp Configuration
-# Session name for WhatsApp Web
-WHATSAPP_SESSION_NAME=event-rsvp-session
+# WhatsApp Business API Configuration
+# Get these from Meta Developer Console: https://developers.facebook.com/apps
+# 1. Create a Meta app
+# 2. Add WhatsApp product
+# 3. Get your access token, phone number ID, and business account ID
+WHATSAPP_ACCESS_TOKEN=your_access_token_here
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
+WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id_here
+WHATSAPP_API_VERSION=v21.0
 
 # Webhook Configuration
-# URL where WhatsApp will send webhooks (for future Meta API integration)
-WEBHOOK_VERIFY_TOKEN=your_verify_token_here
-WEBHOOK_SECRET=your_webhook_secret_here
-
-# Database Configuration (for future use)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=event_rsvp
-# DB_USER=your_db_user
-# DB_PASSWORD=your_db_password
+# Set a random secure string for webhook verification (you'll need this when configuring webhook in Meta)
+WEBHOOK_VERIFY_TOKEN=your_random_secure_verify_token_here
 
 # Logging
 LOG_LEVEL=info
